# inventoryview

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  build-and-push.sh  seed_test_data.sh  test_backend.sh
.specify/memory/: constitution.md
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_credentials.py  003_resource_drift.py  004_playlists.py  005_aap_automation.py  006_usage_audit.py  007_correlation_engine.py
backend/src/inventoryview/: config.py  database.py  main.py
backend/src/inventoryview/api/v1/: auth.py  automations.py  correlations.py  credentials.py  drift.py  health.py  playlists.py  relationships.py  resources.py  router.py  setup.py  usage.py
backend/src/inventoryview/middleware/: auth.py
backend/src/inventoryview/models/: admin.py  auth.py  automation.py  credential.py  relationship.py  resource.py
backend/src/inventoryview/schemas/: auth.py  automation.py  credentials.py  errors.py  pagination.py  playlists.py  relationships.py  resources.py  usage.py
backend/src/inventoryview/services/: aap_correlation.py  aap_import.py  aap_reports.py  asset_correlation.py  auth.py  correlation_jobs.py  credentials.py  drift.py  graph.py  playlists.py  relationships.py  resources.py  usage.py  vault.py
docker/: Dockerfile.postgres  docker-compose.yml  entrypoint.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
specs/001-foundation-core-api/: data-model.md  (+5 more)
(+135 files in other folders)
